@@ -88,6 +88,16 @@ Changes from 2.7.4 to 2.8.0
   search code in common/common.c. Please file an issue if this does not work
   with your platform.
 
+- dummy-ups can now specify `mode` as a driver argument, and separates the
+  notion of `dummy-once` (new default for `*.dev` files) vs. `dummy-loop`
+  (legacy default for `*.seq` and others) [issue #1385]
+
+  * Note this can break third-party test scripts which expected `*.dev`
+    files to work as a looping sequence with a `TIMER` keywords to change
+    values slowly; now such files should get processed to the end once.
+    Specify `mode=dummy-loop` driver option or rename the data file used
+    in the `port` option for legacy behavior.
+
 - Python: scripts have been updated to work with Python 3 as well as 2.
 
   * PyNUT module (protocol binding) supports both Python generations.
